<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/background1"
        android:text="@string/myName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text1"
        android:textSize="@dimen/textSize1" />





    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/padding_medium"
        android:src="@drawable/trololol" />




    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background2"
        android:stretchColumns="0, 1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >




            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_medium"
                android:text="@string/majorLabel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text2" />



            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myMajor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text2" />

        </TableRow>


        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium" >



            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colorLabel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text2" />



            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myFavoriteColor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text2" />

        </TableRow>
    </TableLayout>

</LinearLayout>